hphp/hack/test/typecheck/const_visibility_modifiers/const_narrow_visiblity.php.exp
File "const_narrow_visiblity.php", line 9, characters 17-19:
This member visibility is: private (Typing[4113])
File "const_narrow_visiblity.php", line 5, characters 24-26:
public was expected
